--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </section>
 
             <section class="row">
-                <h3 class="col-xs main-header">projects</h3>
-                <div class="col-xs main-header-bar"></div>
+                <h3 class="main-header">projects</h3>
+                <div class="main-header-bar"></div>
                 <div class="gallery">
                     <article>
                         <h4 class="article-title">
@@ -98,6 +98,33 @@
 
                     <article>
                         <h4 class="article-title">
+                            FlashFluent
+                        </h4>
+                        <div class="article-text">
+                            <p>React/Redux, Node/Express, MongoDB</p>
+                            <p>
+                                FlashFluent is a learning app that was designed to help the architecture
+                                buffs to memorize names of the famous buildings. It features a built-in spaced repetition
+                                algorithm that controls how often the users will be prompted with a certain card base on the level of their mastery.
+                                I built this MVP with a partner in 1 week to practice an implementation of Linked List
+                                data structure.
+                            </p>
+                            <p>
+                                July, 2018
+                            </p>
+                        </div>
+                        <div class="article-img-holder">
+                            <img class="article-img" src="images/ff_screenshots.png" alt="Screenshots of the FlasFluent Beauty app" nopin="nopin"/>
+                        </div>
+
+                        <div class="article-bttns">
+                            <a class="btn btn-play" href="https://spaced-rep-marjef-client.herokuapp.com/" role="link" title="FlashFluent - learning app" target="_blank">Live</a>
+                            <a class="btn btn-link" href="https://github.com/thinkful-ei20/MarinaV-Jeffrey-spacedRepetition-client" role="link" title="FlashFluent - GitHub repository" target="_blank">GitHub</a>
+                        </div>
+                    </article>
+
+                    <article>
+                        <h4 class="article-title">
                             Arcade Game Clone
                         </h4>
                         <div class="article-text">
@@ -128,15 +155,15 @@
         <!---End Main Section-->
 
         <section id="about-section" class="row">
-            <h3 class="col-xs main-header">about</h3>
+            <h3 class="col-xs main-header">i am</h3>
             <div class="col-xs main-header-bar"></div>
             <p class="about-text">
-                I'm a full stack developer with a passion for creating clean, modern, mobile ready web applications
+                .. a full stack developer with a passion for creating clean, modern, mobile ready web applications
                 that put the user experience first. In my most recent projects I've used HTML, CSS and
                 JavaScrip on the front end and NodeJS/Express, PostgresSQL and MongoDB on the back but I also have
-                some expertise in KnockoutJS and Angular 4. I equally enjoy developing individually
-                and on a team.<br>When I’m not obsessing over my latest project, I like exploring new and old places, read anything I
-                can get my hands on, and play piano.
+                some expertise in KnockoutJS and Angular 4. I'm experienced at completing tasks under tight deadlines and
+                enjoy developing both individually and on a team.<br>When I’m not obsessing over my latest project,
+                I like exploring new and old places, read anything I can get my hands on, and play piano.
             </p>
         </section>
 
