Remove old project

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <p>
                                 Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
                                 It allows the users to build and maintain an employee database, assign shifts, and use power filters to
-                                customize the schedule view. This MVP was a team project that I had a pleasure to work on with
+                                customize the schedule view.<br>This MVP was a team project that I had a pleasure to work on with
                                 <a href="https://mdargitz.com/" role="link" title="Marina Dargitz profile" target="_blank">Marina Dargitz</a>,
                                 <a href="http://csprier.surge.sh/" role="link" title="Cameron Prier profile" target="_blank">Cameron Prier</a>, and
                                 <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" role="link" title="Gianluca Paterson profile" target="_blank">Gianluca Paterson</a>
@@ -70,34 +70,6 @@
 
                     <article>
                         <h4 class="article-title">
-                            Streamlined Beauty
-                        </h4>
-                        <div class="article-text">
-                            <p>React/Redux, Node/Express, PostgresSQL</p>
-                            <p>
-                                Inspired by the concept of the beauty-on-demand, StreamlinedBeauty is an advertising platform
-                                that lets the freelance beauty professionals to advertise their services in metro Atlanta.
-                                People that are looking for such services can browse by location and category
-                                to quickly find a professional that will suit their needs. This single-page, responsive,
-                                and a11y-friendly app features authentication, data persistence, multi-user account signup and more.
-                                I designed and built this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
-                            </p>
-                            <p>
-                                June, 2018
-                            </p>
-                        </div>
-                        <div class="article-img-holder">
-                            <img class="article-img" src="images/sb_screenshots.png" alt="Screenshots of the Streamlined Beauty app" nopin="nopin"/>
-                        </div>
-
-                        <div class="article-bttns">
-                            <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="link" title="StreamlinedBeauty - on-demand beauty services" target="_blank">Live</a>
-                            <a class="btn btn-link" href="https://github.com/valsakel/streamlined-beauty-client" role="link" title="StreamlinedBeauty - GitHub repository" target="_blank">GitHub</a>
-                        </div>
-                    </article>
-
-                    <article>
-                        <h4 class="article-title">
                             FlashFluent
                         </h4>
                         <div class="article-text">
@@ -105,9 +77,9 @@
                             <p>
                                 FlashFluent is a learning app that was designed to help the architecture
                                 buffs to memorize names of the famous buildings. It features a built-in spaced repetition
-                                algorithm that controls how often the users will be prompted with a certain card base on the level of their mastery.
-                                I built this MVP with a partner in 1 week to practice an implementation of Linked List
-                                data structure.
+                                algorithm that controls how often the users will be prompted with a certain card based
+                                on the level of their mastery.<br>I built this MVP with a partner in 1 week to practice
+                                an implementation of Linked List data structure.
                             </p>
                             <p>
                                 July, 2018
@@ -125,32 +97,33 @@
 
                     <article>
                         <h4 class="article-title">
-                            Arcade Game Clone
+                            Streamlined Beauty
                         </h4>
                         <div class="article-text">
-                            <p>OOP, HTML5 Canvas</p>
+                            <p>React/Redux, Node/Express, PostgresSQL</p>
                             <p>
-                                I worked on this project while studying for FEND program at Udacity. Using provided game engine and the art assets, I built this
-                                arcade game based on the classical game Frogger. In addition to the basic functionality, I implemented player selection, score and a number of lives to make the game more interactive.
+                                Inspired by the concept of the beauty-on-demand, StreamlinedBeauty is an advertising platform
+                                that lets the freelance beauty professionals to advertise their services in metro Atlanta.
+                                People that are looking for such services can browse by location and category
+                                to quickly find a professional that will suit their needs.<br>I designed and built this
+                                MVP in two weeks while studying for Engineering Immersion program at Thinkful.
                             </p>
                             <p>
-                                2017
+                                June, 2018
                             </p>
                         </div>
                         <div class="article-img-holder">
-                            <img class="article-img" src="images/frogger_cropped.png" alt="Screenshot of the arcade game" nopin="nopin"/>
+                            <img class="article-img" src="images/sb_screenshots.png" alt="Screenshots of the Streamlined Beauty app" nopin="nopin"/>
                         </div>
 
                         <div class="article-bttns">
-                            <a class="btn btn-play" href="https://valsakel.github.io/arcade-game/" role="link" title="Arcade game" target="_blank">Play</a>
-                            <a class="btn btn-link" href="https://github.com/valsakel/arcade-game" role="link" title="Arcade game - GitHub repository" target="_blank">GitHub</a>
+                            <a class="btn btn-play" href="https://streamlinedbeauty.netlify.com/" role="link" title="StreamlinedBeauty - on-demand beauty services" target="_blank">Live</a>
+                            <a class="btn btn-link" href="https://github.com/valsakel/streamlined-beauty-client" role="link" title="StreamlinedBeauty - GitHub repository" target="_blank">GitHub</a>
                         </div>
                     </article>
+
                 </div>
             </section>
-
-
-
         </main>
         <!---End Main Section-->
 
@@ -159,11 +132,12 @@
             <div class="col-xs main-header-bar"></div>
             <p class="about-text">
                 .. a full stack developer with a passion for creating clean, modern, mobile ready web applications
-                that put the user experience first. In my most recent projects I've used HTML, CSS and
-                JavaScrip on the front end and NodeJS/Express, PostgresSQL and MongoDB on the back but I also have
-                some expertise in KnockoutJS and Angular 4. I'm experienced at completing tasks under tight deadlines and
-                enjoy developing both individually and on a team.<br>When I’m not obsessing over my latest project,
-                I like exploring new and old places, read anything I can get my hands on, and play piano.
+                that put the user experience first. In my most recent projects I've used HTML, CSS, JavaScript, and
+                React on the front end and NodeJS/Express, PostgresSQL, and MongoDB on the back but I also have
+                experience with KnockoutJS and Angular 4.<br>I'm comfortable working with minimal supervision, but I've always
+                enjoyed collaborating with colleagues striving to provide great support, trust and respect.<br>When
+                I’m not obsessing over my latest project, I like exploring new and old places with my family, read
+                anything I can get my hands on, and play piano.
             </p>
         </section>
 
