--- a/index.html
+++ b/index.html
@@ -127,33 +127,38 @@
         </main>
         <!---End Main Section-->
 
-        <section id="about-section" class="row">
-            <h3 class="col-xs main-header">i am</h3>
-            <div class="col-xs main-header-bar"></div>
-            <p class="about-text">
-                .. a full stack developer with a passion for creating clean, modern, mobile ready web applications
-                that put the user experience first. In my most recent projects I've used HTML, CSS, JavaScript, and
-                React on the front end and NodeJS/Express, PostgresSQL, and MongoDB on the back but I also have
-                experience with KnockoutJS and Angular 4.<br>I'm comfortable working with minimal supervision, but I've always
-                enjoyed collaborating with colleagues striving to provide great support, trust and respect.<br>When
-                I’m not obsessing over my latest project, I like exploring new and old places with my family, read
-                anything I can get my hands on, and play piano.
-            </p>
+        <section id="about-section">
+            <h3 class="main-header">i am</h3>
+            <div class="main-header-bar"></div>
+            <div class="about-text">
+                <p >
+                    .. a full stack developer with a passion for creating clean, modern, mobile ready web applications
+                    that put the user experience first. In my most recent projects I've used HTML, CSS, JavaScript, and
+                    React on the front end and NodeJS/Express, PostgresSQL, and MongoDB on the back but I also have
+                    experience with KnockoutJS and Angular 4.
+                </p>
+                <p>
+                    I'm a team player and I enjoy collaborating with colleagues
+                    striving to provide great support, trust and respect, but I also don't mind working with minimal
+                    supervision.
+                </p>
+                <p>
+                    When I’m not obsessing over my latest project, I like exploring new and old places with my family, read
+                    anything I can get my hands on, and play piano.
+                </p>
+            </div>
         </section>
 
         <footer id="contacts" class="row" role="contentinfo">
-            <!--<p class="footer-secondary-text">LET'S CONNECT</p>-->
-            <ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/marina-valiquette/" class="" target="_blank">LINKEDIN</a>
-                </li>
-                <li>
-                    <a href="mailto:marina.valiquette@gmail.com" class="" target="_blank">EMAIL</a>
-                </li>
-                <li>
-                    <a href="https://github.com/valsakel" class="" target="_blank">GITHUB</a>
-                </li>
-            </ul>
+            <h3 class="footer-header main-header">let's connect</h3>
+            <div class="main-header-bar"></div>
+            <div class="about-text">
+                <p>Since you're already here, why not to shoot me an email @
+                    <a href="mailto:marina.valiquette@gmail.com" class="" target="_blank">marina.valiquette@gmail.com</a></p>
+                <p>.. or check out my work on <a href="https://github.com/valsakel" class="" target="_blank">GitHub</a></p>
+                <p>.. or connect with me on <a href="https://www.linkedin.com/in/marina-valiquette/" class="" target="_blank">LinkedIn</a></p>
+                <p>.. or all of the above, I'd be thrilled!</p>
+            </div>
         </footer>
         <!---End Footer-->
 
