Split paragraphs in project section

--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
                             <p>
                                 Frames is mobile-friendly, intuitive, and easy to use staff scheduling application for small businesses.
                                 It allows the users to build and maintain an employee database, assign shifts, and use power filters to
-                                customize the schedule view.<br>This MVP was a team project that I had a pleasure to work on with
+                                customize the schedule view.
+                            </p>
+                            <p>
+                                This MVP was a team project that I had a pleasure to work on with
                                 <a href="https://mdargitz.com/" role="link" title="Marina Dargitz profile" target="_blank">Marina Dargitz</a>,
                                 <a href="http://csprier.surge.sh/" role="link" title="Cameron Prier profile" target="_blank">Cameron Prier</a>, and
                                 <a href="https://www.linkedin.com/in/gianluca-paterson-17768278/" role="link" title="Gianluca Paterson profile" target="_blank">Gianluca Paterson</a>
                                 while studying for the EI program at Thinkful.
+
                             </p>
                             <p>
                                 August, 2018
@@ -78,8 +82,10 @@
                                 FlashFluent is a learning app that was designed to help the architecture
                                 buffs to memorize names of the famous buildings. It features a built-in spaced repetition
                                 algorithm that controls how often the users will be prompted with a certain card based
-                                on the level of their mastery.<br>I built this MVP with a partner in 1 week to practice
-                                an implementation of Linked List data structure.
+                                on the level of their mastery.
+                            </p>
+                            <p>
+                                I built this MVP with a partner in 1 week to practice an implementation of Linked List data structure.
                             </p>
                             <p>
                                 July, 2018
@@ -105,8 +111,10 @@
                                 Inspired by the concept of the beauty-on-demand, StreamlinedBeauty is an advertising platform
                                 that lets the freelance beauty professionals to advertise their services in metro Atlanta.
                                 People that are looking for such services can browse by location and category
-                                to quickly find a professional that will suit their needs.<br>I designed and built this
-                                MVP in two weeks while studying for Engineering Immersion program at Thinkful.
+                                to quickly find a professional that will suit their needs.
+                            </p>
+                            <p>
+                                I designed and built this MVP in two weeks while studying for Engineering Immersion program at Thinkful.
                             </p>
                             <p>
                                 June, 2018
