Update URLs in index.html

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                             </p>
                         </div>
                         <div class="article-img-holder">
-                            <img class="article-img" src="images/ff_screenshots.png" alt="Screenshots of the FlasFluent Beauty app" nopin="nopin"/>
+                            <img class="article-img" src="images/ff_screenshots.png" alt="Screenshots of the FlasFluent app" nopin="nopin"/>
                         </div>
 
                         <div class="article-bttns">
-                            <a class="btn btn-play" href="https://spaced-rep-marjef-client.herokuapp.com/" role="link" title="FlashFluent - learning app" target="_blank">Live</a>
-                            <a class="btn btn-link" href="https://github.com/thinkful-ei20/MarinaV-Jeffrey-spacedRepetition-client" role="link" title="FlashFluent - GitHub repository" target="_blank">GitHub</a>
+                            <a class="btn btn-play" href="https://flashfluent.surge.sh" role="link" title="FlashFluent - learning app" target="_blank">Live</a>
+                            <a class="btn btn-link" href="https://github.com/valsakel/spaced-repetition-client" role="link" title="FlashFluent - GitHub repository" target="_blank">GitHub</a>
                         </div>
                     </article>
 
